5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1723_2497.log
== SUBMITION (2019-05-09 10:59:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (>1):
	rend = (saldo/100) * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.298737
-- ERROR:
  File "/home/codebench/codes/1723/2497/main.py", line 14
    while (>1):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.265217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.221208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.406518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.494444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.386925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.521761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.653072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.482369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.575626
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.556175
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.395518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.407048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.593668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.622033
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.619105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.502571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.513201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.418331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.448727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.431987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.442695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.55006
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.486927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.443937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.534443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.486996
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.391426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.315504
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.325101
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.694077
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.538493
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.40667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.388182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.458768
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.520442
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.465521
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.45356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.552873
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.504497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.531157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.462976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.458707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.465822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.321866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.393636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.57927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.744895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.571484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '825.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.502618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.492261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.494874
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.477509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.473812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.319515
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.54736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2497/main.py", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '1275.65'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo>1):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.236194
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1723/2497/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:11:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.207638
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:11:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.189156
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:12:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and t < tempo):
	rend = saldo * (juros/100)
	saldo = saldo + rend
	t = t + 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.163371
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
